# GregLang

./: .GITIGNORE  .gitignore  .travis.yml  GregLang.cabal  Main.hs  Makefile  README.md  hie.yaml  main.gl  package.yaml  stack.yaml
app/: Main.hs
src/: GregLang.hs  Main.hs  SyntaxTree.hs
src/GL/: Args.hs  Context.hs  Ident.hs  Lexer.hs  Loc.hs  Parser.hs  SyntaxTree.hs  Token.hs  Treeable.hs  Type.hs  TypeChecker.hs  Utils.hs
src/GL/Codegen/: Eval.hs  LLVM.hs
src/GL/Data/: Ident.hs  SyntaxTree.hs  TH.hs  Token.hs
src/GL/Data/SyntaxTree/: Expr.hs  Stat.hs
src/GL/Data/Token/: TH.hs
src/GL/Lexer/: Lexable.hs  Monad.hs
src/GL/SyntaxTree/: Expr.hs  Stat.hs
src/GL/Token/: Keyword.hs  TH.hs
src/GL/TypeChecker/: Context.hs  Solver.hs
src/GregLang/: SyntaxTree.hs
src/GregLang/SyntaxTree/: Expr.hs  Stat.hs  Type.hs
test/: LexerTest.hs  MainTest.hs  TokenTest.hs
