cabal-version: 2.4
name: GregLang
version: 0.1.0.0
license: GPL-3.0-only
license-file: LICENSE
maintainer: Gregory1234@users.noreply.github.com
author: Gregory1234
extra-source-files:
    README.md

library
    exposed-modules:
        GL.Args
        GL.Data.Token
        GL.Lexer
        GL.Utils
        GL.Data.SyntaxTree
        GL.Parser
        GL.Type
        GL.Data.TH
        GL.TypeChecker
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wredundant-constraints -Widentities -W
    build-depends:
        base ^>=4.12.0.0,
        parseargs -any,
        megaparsec -any,
        containers -any,
        utility-ht -any,
        split -any,
        template-haskell -any,
        transformers -any

executable GregLangCompiler
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wredundant-constraints -Widentities -W
    build-depends:
        base ^>=4.12.0.0,
        GregLang -any

test-suite GregLangTests
    type: exitcode-stdio-1.0
    main-is: MainTest.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -Wredundant-constraints -Widentities -W
    build-depends:
        base ^>=4.12.0.0,
        tasty -any,
        tasty-quickcheck -any,
        QuickCheck -any,
        GregLang -any,
        megaparsec -any
